--- a/quarto.css
+++ b/quarto.css
@@ -1,17 +1,28 @@
 /*DESKTOP*/
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
 body{
     font-family: "Roboto Serif", serif;
     font-size: 18px;
     font-weight: 400;
-    background-image: linear-gradient(to bottom, rgb(0, 0, 0) 20%, white 70%);
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    margin: 0;
 }
 #top{
     background-color: black;
     color: white;
+    width:100%;
+    min-height:200px;
+}
+.logo{
+    padding:16px;
+}
+#logorodape{
+    padding: 16px;
 }
 #containertop{
     display: flex;
@@ -28,14 +39,6 @@ body{
     justify-content: flex-start;
     align-items: center;
 }
-#menu a{
-    background: none;
-    box-shadow: none;
-    border-radius: 0;
-    width: auto;
-    height: auto;
-    padding: 10px 15px;
-}
 #aberturamenu{
     display:none;
 }
@@ -48,48 +51,9 @@ body{
 #segundalinha > li{
     padding: 0 45px;
 }
-#diferenciais{
-    color: white;
-}
-#containerdiferenciais{
-    display: flex;
-    justify-content: flex-start;
-}
-#ambiente{
-    color: white;
-}
-.containerresponsive{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 16px;
-}
-.responsive{
-    padding: 10px;
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: 220px;
-}
 .container{
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-}
-.depoimentos{
-    font-family: "Roboto Serif", serif;
-    font-size: 25px;
-    font-weight: 500;
-}
-.boxdepoimentos{
-    background-color: rgba(0, 0, 0, 0.788);
-    color: white;
-    height: 203px;
-    width: 460px;
-    padding: 10px;
-    box-sizing: border-box;
-    margin: 0 auto;
-    box-shadow: 5px 5px 10px 5px black;
-    text-align: center;
+    max-width:1200px;
+    margin:0 auto;
 }
 a{
     background-color: rgba(0, 0, 0, 0.788);
@@ -98,10 +62,43 @@ a{
     width: 30%;
     padding: 10px;
     margin: 0 auto;
-    box-sizing: border-box;
     text-align: center;
     box-shadow: 5px 5px 10px 5px black;
     border-radius: 20px;
+    text-decoration: none;
+}
+#produtos{
+    background-color: gray;
+    padding: 16px;
+}
+.containerprodutos{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 16px;
+}
+.produto{
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 220px;
+}
+.produto img{
+    display: block;
+    margin: 0 auto;
+}
+.produto a{
+    background-color: white;
+    color: black;
+    height: auto;
+    width: auto;
+    padding: 0;
+    margin: auto;
+    text-align: center;
+    box-shadow: none;
+    border-radius: 0;
     text-decoration: none;
 }
 a:hover{
@@ -128,20 +125,8 @@ h2{
     font-family: "Arapey", serif;
     font-size: 35px;
     font-weight: 400;
-    margin-left: 15px;
+    margin: 0px 0px 15px 15px;
 }
-p{
-    margin-left: 15px;
-}
-#revendedor{
-    text-align: center;
-}
-.removegradient{
-    background-image: none;
-}
-
-
-
 
 @media screen and (max-width:1421px){
     #containertop{
@@ -153,17 +138,8 @@ p{
         flex-wrap: wrap;
         justify-content: center;
         gap: 20px;
-        width: 100%;
     }
-    #menu ul{
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        gap: 20px;
-        justify-content: center;
-        align-items: center;
-    }
-    #menu a{
+    a{
         height: auto;
         width: auto;
         padding: 0;
@@ -239,4 +215,5 @@ p{
         background-color:white;
     }
 }
+
 
